...
     selected location. Updates the file tree upon success.
     
     - Parameter parentNode: The parent directory node where the folder will be created
     
     */
    func createFolderInNode(in parentNode: FileTreeNode) {
        let alert = UIAlertController(title: "Create Folder", message: "Enter folder name:", preferredStyle: .alert)
        
        alert.addTextField { textField in
            textField.placeholder = "Folder name"
        }
        
        alert.addAction(UIAlertAction(title: "Create", style: .default) { _ in
...
